重构maven包依赖机制 增加首页获取最多关注cuber